user-svc/deploy/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #  rewrite /api/v1/(.*)  /api/v1/$1 break;
  name: backend-api
spec:
  rules:
  - host: ev.funr.xyz
    http:
      paths:
      - path: /api/v1/
        backend:
          serviceName: chargepoint
          servicePort: 8080
      - path: /swagger.json
        backend:
          serviceName: chargepoint
          servicePort: 8080
